[BE/refactor] 프로젝트 썸네일 미디어 ID 필드명 통일
